--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.3.1",
     "fs": "^0.0.1-security",
     "inter-ui": "^3.19.3",
+    "jsonwebtoken": "^9.0.2",
     "next": "latest",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.8",
