updated management pages to use new tiering and cleaned up some not used stuff

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,8 @@
 AWS_ACCESS_KEY_ID=accesskey
 AWS_SECRET_ACCESS_KEY=secretkey
-AWS_BUCKET_NAME=bucket
+AWS_S3_REGION=us-west-1
+AWS_S3_BUCKET=bucketname
 DATABASE_URL=neonurlhere
 SECRET_PASSWORD=hunter2
+NEXT_PUBLIC_BASE_URL=http://localhost:3010
+JWT_SECRET=1234
